--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,17 @@
     <string name="placeholder_answer">Answer</string>
     <string name="NextButton">Next</string>
     <string name="CompleteQuizButton">Finish</string>
+    <string name="RegisterButton">Register</string>
     <string name="LessonName">LessonName</string>
     <string name="todo">TODO</string>
     <string name="LessonScript">LessonScript</string>
 
 
-<!--    Shared Preferences Keys-->
-    <string name="user_name_key">userName</string>
-    <string name="user_age_key">userAge</string>
-    <string name="user_email_key">userEmail</string>
+    <!--    Shared Preferences Keys-->
+    <string name="user_name_key">Enter your name</string>
+    <string name="user_age_key">Enter your age</string>
+    <string name="user_email_key">Enter your email</string>
+    <string name="user_password_key">Enter a password</string>
 
     <string name="completed_registration_key">finishedIntro</string>
 
