--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="LessonScript">LessonScript</string>
 
 
-    <string name="invalidAge">Invalid input!</string>
+    <string name="invalidAge">Invalid age! Age must be between 5 and 100</string>
+    <string name="invalidEmail">Invalid email!</string>
 
 
     <!--    Shared Preferences Keys-->
@@ -42,6 +43,25 @@
 
 <!--    All lessons-->
     <string name="lessonButton"></string>
+    <string name="consultations">Consultations</string>
+    <string name="events">Events</string>
+    <string name="lessons">Lessons</string>
+    <string name="lesson_1">Lesson 1</string>
+    <string name="lesson_2">Lesson 2</string>
+    <string name="lesson_3">Lesson 3</string>
+    <string name="lesson_4">Lesson 4</string>
+    <string name="lesson_5">Lesson 5</string>
+    <string name="lesson_6">Lesson 6</string>
+    <string name="lesson_7">Lesson 7</string>
+    <string name="lesson_8">Lesson 8</string>
+    <string name="lesson_9">Lesson 9</string>
+    <string name="lesson_10">Lesson 10</string>
+    <string name="lesson_11">Lesson 11</string>
+    <string name="lesson_12">Lesson 12</string>
+    <string name="lesson_13">Lesson 13</string>
+    <string name="lesson_14">Lesson 14</string>
+    <string name="lesson_15">Lesson 15</string>
+    <string name="lesson_16">Lesson 16</string>
 
 
 </resources>
